chat controller, chat service, chat tests